徳田さんからいただいたイベントページをマージ。その他タイトル位置や空間を調整。

--- a/_footer.scss
+++ b/_footer.scss
@@ -2,7 +2,7 @@ footer{
     box-sizing: border-box;
     line-height: 2;
     letter-spacing: 0.8px;
-    background-color: grey;
+    background-color: #95959a;
     height: 378px;
     p{
         padding: 0px;
