--- a/_main.scss
+++ b/_main.scss
@@ -1,6 +1,7 @@
 main{
     // margin: auto 120px;
 }
-// .top_banner{
-//     // タスク12
-// }
+section {
+    max-width: 1160px;
+    margin: 0 auto;
+}
