--- a/home/_contact.scss
+++ b/home/_contact.scss
@@ -9,13 +9,11 @@
     
     width: 100%;
     margin: 0 auto;
-    padding-left: 7%;
     position: relative;
     
     .contact-text{
         position: absolute;
         top: 10%;
-        left: 8%;
         margin-bottom: 10px;
         h3{
             font-weight: 500;
@@ -26,6 +24,7 @@
         .contact-text-detail{
             font-size: 16px;
             letter-spacing: 1px;
+            line-height: 24px;
         }
     }
     img{
@@ -64,9 +63,9 @@
         .contact-text{
             position: static;
             padding-bottom: 13px;
-            margin: 0 auto;
+            // margin: 0 auto;
             width: 300px;
-
+            margin: 0 0 0 14px;
             h3{
                 font-size: 18px;
                 padding-bottom: 35px;
