--- a/home/_events.scss
+++ b/home/_events.scss
@@ -2,7 +2,7 @@
     max-width: 1160px;
     width: 100%;
     margin: 0 auto;
-    padding: 140px 0;
+    padding: 0 0 70px;
     // font-family: NotoSansTC;
     overflow: hidden;
     position: relative;
@@ -401,15 +401,17 @@
             left: 0;
             h2{
                 height: auto;
+                font-size: 18px;
             }
         }
         .events-title::before {
             content: "infomation";
             display: inline-block;
             color: #2ca6e0;
-            padding: 5px 0;
+            padding: 0;
+            font-size: 12px;
             position: absolute;
-            top: 40px;
+            top: 23px;
             left: 0;
             right: 0;
             margin: auto;
