--- a/home/_workspace.scss
+++ b/home/_workspace.scss
@@ -55,7 +55,7 @@ section.workspace{
         // @include bg-img('hp-space-pc.png');
         height: 450px;
         background-position: bottom left;
-        margin-bottom: 60px;
+        margin-bottom: 70px;
     }
     .wrap{
         // 手前の背景画像
@@ -105,6 +105,7 @@ section.workspace{
                         color: #2ca6e0;
                         padding: 5px 0;
                         position: absolute;
+                        font-size: 12px;
                         top: 20px;
                         left: 0;
                         right: 0;
