--- a/home/_events.scss
+++ b/home/_events.scss
@@ -30,6 +30,10 @@
     //         margin-left: 0;
     //     }
     // }
+
+    li{
+        list-style: none;
+    }
     .events-title{
         -ms-writing-mode: tb-rl;
         writing-mode: vertical-lr;
@@ -70,23 +74,21 @@
         .home-events-card {
             max-width: 370px;
             width: 100%;
-            height: 445px;
+            height: 400px;
             background-color: #f4f4f5;
             border-radius: 2px;
             margin: 20px 14px;
 
-            a {
-                display: block;
-                height: 445px;
 
-                &:hover {
+                a:hover {
                     text-decoration: none;
                 }
 
                 img {
                     max-width: 100%;
                     width: 100%;
-                    height: auto;
+                    height: 220px;
+                    object-fit: cover;
                 }
 
                 .home-events-date {
@@ -114,13 +116,7 @@
                 }
 
                 .home-events-tag {
-                    display: inline-block;
-                    background: white;
-                    padding: 3px 15px;
-                    border-radius: 20px;
-                    position: relative;
-                    bottom: -70px;
-                    left: 20px;
+                    margin: 75px 25px 0;
 
                     p {
                         margin-bottom: 0;
@@ -132,8 +128,28 @@
                             margin-right: 5px;
                         }
                     }
+                    a{
+                        font-size: 12px;
+                        color: #95959a;
+                    }
+                    a[href*="/event"] {
+                        background: white;
+                        padding: 3px 15px;
+                        margin-right: 10px;
+                        border-radius: 20px;
+                        position: relative;
+                    }
+                    a[href*="/news"] {
+                        background: white;
+                        padding: 3px 15px;
+                        margin-right: 10px;
+                        border-radius: 20px;
+                        position: relative;
+                    }
+                    .post-categories{
+                        display: flex;
+                    }
                 }
-            }
         }
     }
 
@@ -264,14 +280,18 @@
         .home-events-card {
             max-width: 370px;
             width: 100%;
-            height: 445px;
+            height:400px;
             background-color: #f4f4f5;
             border-radius: 2px;
             margin: 20px auto;
+            img{
+                max-width: 100%;
+                height: auto;
+            }
 
             a {
-                display: block;
-                height: 445px;
+                // display: block;
+                // height: 445px;
 
                 .home-events-date {
                     width: 270px;
@@ -346,7 +366,7 @@
                         height: 397px;
 
                         a {
-                            height: 397px;
+                            // height: 397px;
 
                             .home-events-date {
                                 width: 241px;
