--- a/home/_news.scss
+++ b/home/_news.scss
@@ -55,7 +55,11 @@
             letter-spacing: 0.8px;
             color: #212426;
             border-top: 2px solid #f4f4f5;
-            padding: 10px 10px 0 10px            
+            padding: 10px 10px 0 10px;     
+            width: 90%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;       
         }
         .post-infomation{
             display:flex;
@@ -114,6 +118,7 @@
             .post-title{
                 padding-top: 20px;
                 padding-left: 20px;
+                width: 100%;
             }
             .post-infomation{
                 padding-bottom: 20px;
