見出しの文字太さ調整

--- a/_workspacepage.css
+++ b/_workspacepage.css
@@ -563,6 +563,7 @@
     -ms-writing-mode: lr-tb;
     writing-mode: horizontal-tb;
     text-align: left;
+    font-weight: bold;
   }
   .workspacepage .top_banner .top_banner_spaceTitle h2::before {
     font-size: 12px;
@@ -605,6 +606,7 @@
     margin-bottom: 30px;
     font-weight: bold;
     writing-mode: horizontal-tb;
+    font-weight: bold;
   }
   .workspacepage .contents .tab-content .tab-pane .equipment-section .top_banner_spaceTitle h2::before {
     font-size: 12px;
@@ -634,6 +636,7 @@
     line-height: 20px;
     writing-mode: horizontal-tb;
     text-align: center;
+    font-weight: bold;
   }
   .workspacepage .contents .tab-content .member-secton .top_banner_spaceTitle h2::before {
     font-size: 12px;
@@ -672,6 +675,7 @@
     line-height: 20px;
     writing-mode: horizontal-tb;
     text-align: center;
+    font-weight: bold;
   }
   .workspacepage .contents .tab-content .compare-section .top_banner_spaceTitle h2::before {
     font-size: 12px;
