タブレットのメイン画像の非表示状態を修正

--- a/_workspacepage.scss
+++ b/_workspacepage.scss
@@ -434,6 +434,10 @@
             .top_banner_img_pc {
                 display: none;
             }
+            .top_banner_img_tb{
+                display: block;
+            }
+    
         }
 
         .contents {
