--- a/_workspacepage.css
+++ b/_workspacepage.css
@@ -417,6 +417,9 @@
   .workspacepage .top_banner .top_banner_img_pc {
     display: none;
   }
+  .workspacepage .top_banner .top_banner_img_tb {
+    display: block;
+  }
   .workspacepage .contents {
     max-width: 690px;
   }
