--- a/style.css
+++ b/style.css
@@ -2849,16 +2849,19 @@ section {
 }
 
 @media screen and (min-width: 769px) {
-  .workspacepage .top_banner_img_tb {
+  .workspacepage .table-mobile {
     display: none;
   }
-  .workspacepage .table-mobile {
+  .workspacepage .top_banner_img_tb {
     display: none;
   }
 }
 
 @media screen and (min-width: 541px) {
   .workspacepage .top_banner_img_sp {
+    display: none;
+  }
+  .workspacepage .top_banner_img_tb {
     display: none;
   }
 }
@@ -3038,6 +3041,9 @@ section {
     margin-left: 0;
     margin-bottom: 14px;
     height: auto;
+  }
+  .workspacepage .top_banner .top_banner_img_tb {
+    display: none;
   }
   .workspacepage .top_banner .top_banner_spaceTitle {
     left: 15px;
@@ -3250,10 +3256,6 @@ section {
 
 .top_banner {
   height: auto;
-}
-
-.top_banner .top_banner_img_tb {
-  display: none;
 }
 
 .top_banner .top_banner_spaceTitle {
