pc版のスタイルを整えて、タグの機能を作った

--- a/_servicepage.scss
+++ b/_servicepage.scss
@@ -1,3 +1,131 @@
 .servicepage{
-    // タスク13
+    .contents{
+        letter-spacing: 0.8px;
+        line-height: 22px;
+        .tab-pane{
+            .link-btn{
+                font-size: 16px;
+                border: solid 2px #2ca6e0;
+                color: #2ca6e0;
+                padding: 10px 37px 10px 25px;
+                border-radius: 22px;
+                .link-img{
+                    width: 29px;
+                    height: auto;
+                    margin-left: 30px;
+                }
+            }
+            .about{
+                padding-top: 60px;
+                padding-bottom: 30px;
+                width: 770px;
+                p{
+                    font-size: 14px;
+                    color: #212426;
+                }
+            }
+            .cards-wrap{
+                padding-top: 100px;
+                display: flex;
+                justify-content: space-between;
+                .card{
+                    border: none;
+                    width: 270px;
+                    height: auto;
+                    position: relative;
+                    .card-img-top{
+                        width: 270px;
+                        height: 171px;
+                    }
+                    .card-body{
+                        padding: 20px 0 100px 0;
+                        .card-title{
+                            font-size: 18px;
+                            font-weight: bold;
+                            letter-spacing: 1.2px;
+                        }
+                        .card-text{
+                            font-size: 14px;
+                            text-indent: 1em;
+                        }
+                        .card-link{
+                            display: block;
+                            margin-top: 60px;
+                            position: absolute;
+                            bottom: 0;
+                        }
+                    }
+                }
+            }
+            .carousel{
+                margin-top: 100px;
+                margin-bottom: 154px;
+                .carousel-inner{
+                    background-color: #f7f7f7;
+                    position: relative;
+                    .backgroud-text{
+                        font-size: 100px;
+                        font-weight: bold;
+                        position: absolute;
+                        color: rgb(255, 255, 255, 0.5);
+                        bottom: 46px;
+                        right: 129px;
+                        z-index: -5;
+                    }
+                    .carousel-item{
+                        .slide-content{
+                            display: flex;
+                            padding: 60px 0;
+                            margin: 0 auto;
+                            width: 770px;
+                            z-index: -1;
+                            .about-user{
+                                img{
+                                    width: 100px;
+                                    height: 100px;
+                                    margin-bottom: 40px;
+                                }
+                                p{
+                                    font-size: 16px;
+                                    font-weight: bold;
+                                    color: #212426;
+                                }
+                            }
+                            .comment-text{
+                                padding-left: 68px;
+                                width: 600px;
+                                h5{
+                                    font-size: 18px;
+                                    font-weight: bold;
+                                }
+                                .category{
+                                    font-size: 14px;
+                                    color: #95959a;
+                                }
+                                .support-detail{
+                                    color: #212426;
+                                    font-size: 14px;
+                                    padding-top: 67px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:768px){
+    .servicepage{
+        background-color: red;
+        .contents{
+            .support-wrap{
+                .cards-wrap{
+                    flex-wrap: wrap;
+                }
+            }
+        }
+    }
+
 }
