--- a/newspage/_allnews.scss
+++ b/newspage/_allnews.scss
@@ -1,3 +1,188 @@
-.allnews{
-    // タスク１１
+.allnews {
+    display: block;
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1180px;
+    .allnews-title {
+        -ms-writing-mode: tb-rl;
+        writing-mode: vertical-lr;
+        margin-bottom: 150px;
+        position: absolute;
+        left: 40px;
+        h2 {
+            color: #333333;
+            font-size: 30px;
+            height: 150px;
+            letter-spacing: 5px;
+        }
+    }
+    .Newstabs_A>ul {
+        text-align: left;
+        font-weight: 400;
+        margin: 50px 0 0;
+        padding: 0;
+        position: relative;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        >li {
+            display: inline-block;
+            background: #fafafa;
+            padding: 0.5em 0;
+            text-align: center;
+            width: 10%;
+        }
+    }
+    .contents {
+        width: 85%;
+        margin-right: 0;
+        padding-top: 35px;
+        padding-right: 46px;
+    }
+    .month {
+        text-align: right;
+        padding-bottom: 15px;
+        font-family: Ubuntu;
+        font-size: 30px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.2;
+        letter-spacing: 2.5px;
+        color: #f4f4f5;
+    }
+    .top-allnews {
+        p {
+            font-size: 14px;
+            margin: 0;
+            span {
+                font-size: 12px;
+                font-weight: 500f;
+                border-radius: 30.5px;
+                color: white;
+                padding: 1px 15px;
+                margin: 0 15px;
+                width: auto;
+            }
+        }
+        a:hover {
+            text-decoration: blink;
+            .post-title {
+                color: #2ca6e0;
+                background: #f4f4f5;
+            }
+            .post-allnews {
+                background: #f4f4f5;
+            }
+        }
+        .post-allnews {
+            display: flex;
+            border-top: 2px solid #f4f4f5;
+            padding: 20px;
+        }
+        .post-date {
+            font-weight: bold;
+            font-stretch: normal;
+            font-style: normal;
+            font-size: 14px;
+            letter-spacing: 0.8px;
+            color: #212426;
+        }
+        .post-category span {
+            &.allnews {
+                background-color: #2ca6e0;
+            }
+            &.ad {
+                background-color: #d80b17;
+            }
+            &.update {
+                background-color: #f9db02;
+            }
+        }
+        .post-title {
+            font-weight: 500;
+            font-stretch: normal;
+            font-style: normal;
+            letter-spacing: 0.8px;
+            color: #212426;
+        }
+        img {
+            width: 29px;
+            height: 5px;
+            padding-top: 1px;
+        }
+    }
+}
+
+@media (max-width: 767.98px) {
+    .allnews {
+        width: 89%;
+        .allnews-title {
+            left: 0px;
+        }
+        .contents {
+            width: 95%;
+            padding-right: 0;
+        }
+        .top-allnews {
+            width: 90%;
+            margin-left: 27px;
+            padding-left: 60px;
+            .post-title {
+                padding-top: 20px;
+                padding-left: 20px;
+            }
+            .post-allnews {
+                padding-bottom: 20px;
+                padding-left: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 575.98px) {
+    .allnews {
+        width: 100%;
+        .allnews-title {
+            -webkit-writing-mode: initial;
+            writing-mode: initial;
+            margin-bottom: 51px;
+            position: relative;
+            text-align: center;
+            h2 {
+                height: auto;
+            }
+            &::before {
+                display: inline-block;
+                color: #2ca6e0;
+                padding: 5px 0;
+                position: absolute;
+                top: 40px;
+                left: 0;
+                right: 0;
+                margin: auto;
+                transform: initial;
+                -ms-transform: initial;
+                -moz-transform: initial;
+                -webkit-transform: initial;
+                -o-transform: initial;
+            }
+        }
+        .contents {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        .top-allnews {
+            width: 100%;
+            padding: 0 14px;
+            margin: 0 0 -2px;
+            .post-title {
+                padding: 20px 20px 0 20px;
+            }
+        }
+        .row {
+            margin: 0;
+        }
+    }
 }
